fix word wrap

--- a/public/assets/style.scss
+++ b/public/assets/style.scss
@@ -583,7 +583,7 @@ button:hover {
     vertical-align: top;
     line-height: 1.4;
     padding-right: 10px;
-    word-wrap: break-word
+    word-wrap: break-word;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
